Fix main scrollbar styling

--- a/src/assets/styles/cmps/group/GroupList.scss
+++ b/src/assets/styles/cmps/group/GroupList.scss
@@ -1,17 +1,14 @@
 .group-list {
     display: flex;
-    // column-gap: rem(12px);
+
     overflow-x: auto;
-    // overflow-y: hidden;
-    // scrollbar-color: #fff6 #00000026;
-    // scrollbar-width: auto;
     grid-area: body;
 
-    // -webkit-transform: translate3d(0, 0, 0);
-    scrollbar-color: var(--ds-background-neutral-hovered, #091e4224) var(--ds-background-neutral, #091e420f);
-    scrollbar-width: thin;
-    scrollbar-gutter: stable both-edges;
+    scrollbar-color: #fff6 #00000026;
+    scrollbar-width: auto;
 
-    padding: rem(14px) rem(12px) rem(16px);
+    padding-inline: rem(12px);
+    padding-block-end: rem(8px);
+    margin-block: rem(14px) rem(8px);
     z-index: 100;
 }
